--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
     <body id="body">
 
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-fixed-top bg-body-tertiary fixed-top">
-      <a class="navbar-brand d-flex align-items-center" href="#">   Covid
-         <span style="color: #4492ce;"><i class="fa-solid fa-virus"></i>19</span>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-        <div class="container-fluid">
-          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-            <ul class="navbar-nav d-flex align-items-center">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" id="navbar">
+      <div class="container-fluid">
+        <a class="navbar-brand d-flex align-items-center" href="#">   Covid
+          <span style="color: #4492ce;"><i class="fa-solid fa-virus"></i>19</span>
+       </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+          <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#home">Home</a>
               </li>
@@ -48,7 +47,6 @@
                 <button class="btn btn-light me-2" type="button" onclick="dark()"><a href="#"> <img src="https://img.icons8.com/?size=100&id=25031&format=png&color=000000" id="img" ></a></button>
             </form>
           </div>
-        </div>
       </nav>
 
 
@@ -57,6 +55,9 @@
       <div id="home" class="container text-center" style="margin-top: 10%;">
         <div class="row my-5 ">
             <div class="col-md-6">
+              <br>
+              <br>
+              <br>
                 <h1>Corona <span style="color: #4492ce;"> (covid-19)</span> Virus</h1>
                 <p>the corona virus (covid-19) was first reported in wuhan,hubei, china in december 2019 , the
                     outbreak
@@ -78,6 +79,9 @@
                 <p> * Last updated : Jun 21, 2020, 09:24 AM America/Chicago</p>
             </div>
             <div class="col-md-6">
+              <br>
+              <br>
+              <br>
                 <img class="img-fluid my-6" src="img/1.png" alt="">
             </div>
         </div>
